<resources>
    <string name="app_name">Mobcly</string>
    <string name="prefs_file">es.ujaen.rma00035.mobcly.PREFERENCE_FILE_KEY</string>
    <string name="title_activity_agenda">Agenda</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="nombre">Nombre</string>
    <string name="fecha">Fecha</string>
    <string name="hora">Hora</string>
    <string name="cancelar">Cancelar</string>
    <string name="guardar">Guardar</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="fcm_message">Localizacion</string>
    <string name="default_notification_channel_id">5</string>
    <string name="localizacion_en_proceso">Localizacion en proceso</string>
    <string name="email">Email</string>
    <string name="contrase_a">Contraseña</string>
    <string name="registrar">Registrar</string>
    <string name="acceder">Acceder</string>
    <string name="google">Google</string>
    <string name="padre">Padre</string>
    <string name="hijo">Hijo</string>
    <string name="elije_el_tipo_de_perfil_que_vas_a_usar">Elije el tipo de perfil que vas a usar</string>
    <string name="escanea_el_codigo_qr_para_configurar_tu_hijo_camara_encendida">Escanea el codigo Qr para configurar tu hijo. Camara encendida</string>
</resources>